notejam/app-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: notejam-app
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: notejam-app
#   template:
#     metadata:
#       labels:
#         app: notejam-app
#     spec:
#       containers:
#       - name: notejam-app
#         image: anshu0895/notejam-app:latest
#         ports:
#           - containerPort: 4000
#         env:
#           - name: NODE_ENV
#             value: "production"
#           - name: DB_HOST
#             value: "notejam-db"
#           - name: DB_USER
#             value: "anshu"
#           - name: DB_PASSWORD
#             value: "anshu"
#           - name: DB_NAME
#             value: "notejam"
#           - name: DB_PORT
#             value: "5432"

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notejam-app
  template:
    metadata:
      labels:
        app: notejam-app
    spec:
      containers:
      - name: notejam-app
        image: anshu0895/notejam-app:latest
        ports:
          - containerPort: 4000
