notejam/db-statefulset.yaml


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notejam-db
spec:
  serviceName: "notejam-db"
  replicas: 1
  selector:
    matchLabels:
      app: notejam-db
  template:
    metadata:
      labels:
        app: notejam-db
    spec:
      containers:
      - name: notejam-db
        image: anshu0895/notejam-db:latest
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
