notejam/app-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: notejam-app
# spec:
#   selector:
#     app: notejam-app
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 4000
#   type: LoadBalancer

apiVersion: v1
kind: Service
metadata:
  name: notejam-app
spec:
  selector:
    app: notejam-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 30080  # You can specify a node port or let Kubernetes choose one for you.
  type: NodePort
