notejam/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notejam-db
spec:
  selector:
    app: notejam-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
