notejam/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notejam-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: notejam-session
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  rules:
  - host: notejam.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notejam-app
            port:
              number: 80
